<resources>
    <string name="app_name">淘猫折扣</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_login">登录</string>


    <string name="home_message">消息</string>
    <!-- 首页文字-->
    <string name="home_icon1">9.9包邮</string>
    <string name="home_icon2">美妆</string>
    <string name="home_icon3">聚划算</string>
    <string name="home_icon4">品牌精选</string>
    <string name="home_icon5">推广赚钱</string>
    <string name="home_icon6">0元包邮</string>
    <string name="home_icon7">女装</string>
    <string name="home_icon8">淘猫福利</string>
    <string name="home_icon9">每日抽奖</string>
    <string name="home_icon10">新手教程</string>

    <!-- 淘抢购-->
    <string name="purchase_1">限时抢购</string>
    <string name="purchase_2">已开抢</string>
    <string name="purchase_3">疯抢中</string>
    <string name="purchase_4">限时开抢</string>
    <string name="purchase_5">本场还剩</string>

    <!-- 收藏-->
    <string name="collection_1">收藏</string>
    <string name="collection_2">取消收藏</string>

    <!-- 个人中心-->
    <string name="user1">浏览足迹</string>
    <string name="user2">账户明细</string>
    <string name="user3">邀请好友</string>
    <string name="user4">我的订单</string>
    <string name="user5">兑换中心</string>
    <string name="user6">充值中心</string>
    <string name="user7">帮助中心</string>
    <string name="user8">设置</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="develop_company">筑梦未来</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_login">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="filter_code">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="mi_done">Done</string>
    <!--<string name="base_url">http://192.168.0.232/handler/</string>-->


    <!--titile-->
    <string name="title_help">帮助中心</string>
    <string name="title_browse_records">浏览记录</string>

    <string name="title_partner_center">合伙人中心</string>
    <string name="title_income_statement">收益报表</string>
    <string name="title_my_partner">合伙人</string>
    <string name="title_partner_order">合伙人订单</string>







    <string name="title_coupons">优惠券</string>








    <!--goodsDeatils-->
    <string name="back_top">返回顶部</string>
    <string name="add_shopping_cart">加入购物车</string>

    <string name="current_price">现价</string>
    <string name="old_price">原价</string>
    <string name="taxes">税率</string>
    <string name="product_title">金三角JSJ HDMI线2.0版机顶盒电视电脑PS3/4 hdmi线4K高清线</string>
    <string name="specifications_choice">选择规格</string>
    <string name="postage">邮费：</string>
    <string name="ship_address">发货：</string>
    <string name="after_sale">售后：</string>
    <string name="rests">其他：</string>
    <string name="productdetails_feature01">正品保障</string>
    <string name="productdetails_feature02">低价直采</string>
    <string name="productdetails_feature03">金牌服务</string>
    <string name="productdetails_feature04">政府监督</string>
    <string name="info_imgtext">图文详情</string>
    <string name="info_photo">产品实拍</string>
    <string name="info_eval">评价详情</string>
    <string name="no_eval">暂无评论哦</string>

</resources>
