<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.Purchase">
    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/theme"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:gravity="center"
       android:background="@color/theme">
       <TextView
           android:text="@string/purchase_1"
           android:textSize="20sp"
           android:textColor="@color/white"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

   </LinearLayout>
   <LinearLayout
       android:background="@color/purchase_black"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="70dp">
       <LinearLayout
           android:layout_weight="1"
           android:layout_width="0dp"
           android:orientation="vertical"
           android:gravity="center"
           android:layout_height="match_parent">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text2"
               android:text="00:00"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text"
               android:text="@string/purchase_2"/>
       </LinearLayout>
       <LinearLayout
           android:layout_weight="1"
           android:layout_width="0dp"
           android:orientation="vertical"
           android:gravity="center"
           android:layout_height="match_parent">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text2"
               android:text="10:00"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text"
               android:text="@string/purchase_2"/>
       </LinearLayout>
       <LinearLayout
           android:layout_weight="1"
           android:layout_width="0dp"
           android:background="@color/orangered"
           android:orientation="vertical"
           android:gravity="center"
           android:layout_height="match_parent">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text2"
               android:text="12:00"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text"
               android:text="@string/purchase_3"/>
       </LinearLayout>
       <LinearLayout
           android:layout_weight="1"
           android:layout_width="0dp"
           android:orientation="vertical"
           android:gravity="center"
           android:layout_height="match_parent">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text2"
               android:text="15:00"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text"
               android:text="@string/purchase_4"/>
       </LinearLayout>
       <LinearLayout
           android:layout_weight="1"
           android:layout_width="0dp"
           android:orientation="vertical"
           android:gravity="center"
           android:layout_height="match_parent">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text2"
               android:text="20:00"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/purchase_title_text"
               android:text="@string/purchase_4"/>
       </LinearLayout>
   </LinearLayout>
   <LinearLayout
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="50dp">
       <View
           android:background="@color/purchase_black"
           android:layout_width="100dp"
           android:layout_marginRight="15dp"
           android:layout_height="1dp"/>
       <TextView
           android:textColor="@color/black"
           android:textSize="15sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/purchase_5"/>
       <TextView
           android:textColor="@color/black"
           android:textSize="15sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="02:00:55"/>
       <View
           android:background="@color/purchase_black"
           android:layout_marginLeft="15dp"
           android:layout_width="100dp"
           android:layout_height="1dp"/>
   </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/purchase_recy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp" />

</LinearLayout>